fixed: button icons were the wrong colour on non-default buttons
now the same colour as text (white), on coloured buttons

--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -116,6 +116,7 @@
   font-size: 14px;
   line-height: 1;
 }
+.btn-primary .icon,
 .btn-positive .icon,
 .btn-negative .icon,
 .btn-warning .icon {
